totally restructured EditMode, split up into EditOperation and EditOperationStep classes to nicely separate everything from each other. Now it is much better to handle and it - again - makes much more sense as ever before!

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -136,10 +136,16 @@
 
     <script type='text/javascript' src='{% static "build/ControlButtons.js" %}'></script>
 
-    <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditOperationStep.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/SelectOldAreasStep.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/CreateNewGeometryStep.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/CreateNewNameStep.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/AddChangeStep.js" %}'></script>
     <script type='text/javascript' src='{% static "build/WorkflowWindow.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NewGeometryTool.js" %}'></script>
     <script type='text/javascript' src='{% static "build/NewNameTool.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditOperation.js" %}'></script>
+    <script type='text/javascript' src='{% static "build/EditMode.js" %}'></script>
 
     <script type='text/javascript' src='{% static "build/ButtonArea.js" %}'></script>
     <script type='text/javascript' src='{% static "build/Button.js" %}'></script>
