restyled input fields and workflow window, integrated moment.js to parse date given into newHiventBox date field

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -83,6 +83,8 @@
 
     <script type="text/javascript" src='{% static "build/select2.min.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/moment.js" %}'></script>
+
 
     <!-- utils -->
     <script type="text/javascript" src='{% static "build/DOMElement.js" %}'></script>
