on the way to redesign everything...

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -140,10 +140,10 @@
     <script type="text/javascript" src='{% static "build/ControlButtons.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/SelectOldAreasStep.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/CreateNewGeometryStep.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/CreateNewNameStep.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/AddChangeStep.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewGeometry.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewName.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.AddChange.js" %}'></script>
     <script type="text/javascript" src='{% static "build/WorkflowWindow.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewGeometryTool.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewNameTool.js" %}'></script>
