made select step reversible

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -80,10 +80,8 @@
     <script type="text/javascript" src='{% static "build/TessellateModifier.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/BrowserDetect.js" %}'></script>
-
     <script type="text/javascript" src='{% static "build/select2.min.js" %}'></script>
-
-    <script type="text/javascript" src='{% static "build/moment.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/undomanager.js" %}'></script>
 
 
     <!-- utils -->
