restructure modules, made NowMarker own UI model

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -135,7 +135,7 @@
     <script type="text/javascript" src='{% static "build/CategoryFilter.js" %}'></script>
     <script type="text/javascript" src='{% static "build/CategoryIconMapping.js" %}'></script>
 
-    <script type="text/javascript" src='{% static "build/ControlButtons.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/ControlButtonsMap.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
@@ -190,6 +190,7 @@
     <script type="text/javascript" src='{% static "build/NowMarker.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Watermark.js" %}'></script>
+
 
     <!-- main -->
     <script type="text/javascript" src='{% static "build/default_config.js" %}'></script>
