separated control buttons from map and timeline

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -188,6 +188,7 @@
 
     <script type="text/javascript" src='{% static "build/Timeline.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NowMarker.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/ControlButtonsTimeline.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Watermark.js" %}'></script>
 
