elimnated all sidebar and widgets, some basic restructuring to make HistGlobe more modular

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -121,6 +121,9 @@
     <script type="text/javascript" src='{% static "build/Display2D.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Globe.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/ControlButtonsTop.js" %}'></script>
+
     <script type="text/javascript" src='{% static "build/Popover.js" %}'></script>
 
     <!-- modules -->
@@ -135,7 +138,6 @@
     <script type="text/javascript" src='{% static "build/CategoryFilter.js" %}'></script>
     <script type="text/javascript" src='{% static "build/CategoryIconMapping.js" %}'></script>
 
-    <script type="text/javascript" src='{% static "build/ControlButtonsMap.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
