MAKE HISTOGLOBE GREAT AGAIN!

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -116,17 +116,11 @@
     <script type="text/javascript" src='{% static "build/StateVar.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Vector.js" %}'></script>
 
-    <!-- display -->
-    <script type="text/javascript" src='{% static "build/Display.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/Display2D.js" %}'></script>
+    <!-- modules -->
+    <script type="text/javascript" src='{% static "build/SpatialDisplay.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Globe.js" %}'></script>
 
-    <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/ControlButtonsTop.js" %}'></script>
-
-    <script type="text/javascript" src='{% static "build/Popover.js" %}'></script>
-
-    <!-- modules -->
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnGlobe.js" %}'></script>
@@ -138,6 +132,7 @@
     <script type="text/javascript" src='{% static "build/CategoryFilter.js" %}'></script>
     <script type="text/javascript" src='{% static "build/CategoryIconMapping.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/ControlButtonsTop.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
@@ -153,6 +148,7 @@
 
     <script type="text/javascript" src='{% static "build/ButtonArea.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Button.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Popover.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Title.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Help.js" %}'></script>
