created example output json and will store hivent and change information on the server now

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -69,7 +69,6 @@
     <script type="text/javascript" src='{% static "build/leaflet.label.js" %}'></script>
     <script type="text/javascript" src='{% static "build/leaflet.markercluster.js" %}'></script>
     <script type="text/javascript" src='{% static "build/leaflet.draw.js" %}'></script>
-
     <script type="text/javascript" src='{% static "build/wicket.js" %}'></script>
     <script type="text/javascript" src='{% static "build/wicket-leaflet.js" %}'></script>
 
@@ -82,6 +81,7 @@
     <script type="text/javascript" src='{% static "build/BrowserDetect.js" %}'></script>
     <script type="text/javascript" src='{% static "build/select2.min.js" %}'></script>
     <script type="text/javascript" src='{% static "build/undomanager.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/moment.js" %}'></script>
 
 
     <!-- utils -->
