updated data model to new properties of areas, loaded them initially from csv file, saved in database and hand over to the client on init of HG instance

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -123,6 +123,7 @@
 
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaLoader.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnGlobe.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Styler.js" %}'></script>
