--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -85,6 +85,7 @@
 
 
     <!-- utils -->
+    <script type="text/javascript" src='{% static "build/DOMElementCreator.js" %}'></script>
     <script type="text/javascript" src='{% static "build/DOMElement.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Div.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Span.js" %}'></script>
