cleaned up Hivents scripts, initially loaded Hivents from database, adapted Area loading to it

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -149,20 +149,16 @@
     <script type="text/javascript" src='{% static "build/HistoGraph.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventBuilder.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventDatabaseInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventHandle.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/HiventLoader.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoAtTag.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopover.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopovers.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventList.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventMarker.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventMarker2D.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventMarkerRegion.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventMarkerTimeline.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventPresenter.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventStory.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventTooltips.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventsOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventsOnTimeline.js" %}'></script>
