load init areas and rest areas from server, start change queue

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -82,6 +82,7 @@
     <script type="text/javascript" src='{% static "build/select2.min.js" %}'></script>
     <script type="text/javascript" src='{% static "build/undomanager.js" %}'></script>
     <script type="text/javascript" src='{% static "build/moment.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Queue.js" %}'></script>
 
 
     <!-- utils -->
