completed operation workflow by sending operation data to server, saving it and receiving answer and saving their data. Now adapt dates

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -151,7 +151,7 @@
 
     <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventHandle.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventLoader.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/HiventInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoAtTag.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopover.js" %}'></script>
