successfully set up doubly-linked list and ability to add all labels into it

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -100,16 +100,17 @@
     <script type="text/javascript" src='{% static "build/GeometryReader.js" %}'></script>
     <script type="text/javascript" src='{% static "build/GeometryOperator.js" %}'></script>
 
-    <script type="text/javascript" src='{% static "build/WithinTree.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/WithinTreeNode.js" %}'></script>
-
     <script type="text/javascript" src='{% static "build/ABTest.js" %}'></script>
     <script type="text/javascript" src='{% static "build/CSSCreator.js" %}'></script>
     <script type="text/javascript" src='{% static "build/CallbackContainer.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/DoublyLinkedList.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/DoublyLinkedListNode.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Mixin.js" %}'></script>
     <script type="text/javascript" src='{% static "build/ObjectArray.js" %}'></script>
     <script type="text/javascript" src='{% static "build/StateVar.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Vector.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/WithinTree.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/WithinTreeNode.js" %}'></script>
 
     <!-- modules -->
     <script type="text/javascript" src='{% static "build/SpatialDisplay.js" %}'></script>
@@ -119,7 +120,7 @@
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/Styler.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/LabelManager.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/BrowserDetector.js" %}'></script>
 
