readded HistoGraph, restructured DOM structure for timeline

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -120,6 +120,7 @@
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreasOnHistoGraph.js" %}'></script>
     <script type="text/javascript" src='{% static "build/LabelManager.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/BrowserDetector.js" %}'></script>
