--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -117,6 +117,7 @@
     <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
