extended Area model, integrated AreaHandle and adapt everything to it

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -117,6 +117,8 @@
     <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaTerritory.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaInterface.js" %}'></script>
