--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -121,8 +121,9 @@
     <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/AreaInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaTerritoryLayerOnMap.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaNameLayerOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnHistoGraph.js" %}'></script>
     <script type="text/javascript" src='{% static "build/LabelManager.js" %}'></script>
 
@@ -132,6 +133,8 @@
     <script type="text/javascript" src='{% static "build/CategoryIconMapping.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/ControlButtonsTop.js" %}'></script>
+
+    <script type="text/javascript" src='{% static "build/DatabaseInterface.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
@@ -156,7 +159,6 @@
 
     <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventHandle.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HiventInterface.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoAtTag.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopover.js" %}'></script>
