simplified the data model and loaded all information sucessfully from server to client, now ready to be visualized

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -119,6 +119,7 @@
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritory.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
