areas on load work like a charme. Now get EditMode to work again

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -116,11 +116,11 @@
     <script type="text/javascript" src='{% static "build/SpatialDisplay.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Map.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritory.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaChange.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/AreaHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritoryLayerOnMap.js" %}'></script>
@@ -158,8 +158,9 @@
 
     <script type="text/javascript" src='{% static "build/HistoGraph.js" %}'></script>
 
-    <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventHandle.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/HistoricalChange.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoAtTag.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopover.js" %}'></script>
