restructured EditOperation, introduced EditOperationTransition, see if that works. Got SelectOldArea step to work again forward and backward

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -137,17 +137,23 @@
 
     <script type="text/javascript" src='{% static "build/DatabaseInterface.js" %}'></script>
 
+    <script type="text/javascript" src='{% static "build/EditMode.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperation.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewGeometry.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewName.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewTerritories.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewNames.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.AddChange.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/WorkflowWindow.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/NewGeometryTool.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition0to1.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition1to2.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition2to3.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition3to4.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationTransition4to5.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/NewTerritoryTool.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewNameTool.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewHiventBox.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditOperation.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditMode.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/WorkflowWindow.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/ButtonArea.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Button.js" %}'></script>
