on the way to implement the new data model

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -121,6 +121,11 @@
     <script type="text/javascript" src='{% static "build/AreaTerritory.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaChange.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.UNI.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.INC.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.SEP.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.SEC.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/AreaChange.NCH.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritoryLayerOnMap.js" %}'></script>
