renamed entities also on client side

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -120,7 +120,6 @@
     <script type="text/javascript" src='{% static "build/Area.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritory.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaName.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/AreaChange.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreasOnMap.js" %}'></script>
     <script type="text/javascript" src='{% static "build/AreaTerritoryLayerOnMap.js" %}'></script>
@@ -138,7 +137,7 @@
     <script type="text/javascript" src='{% static "build/DatabaseInterface.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditMode.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditOperation.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditModeOperation.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewTerritories.js" %}'></script>
@@ -160,7 +159,8 @@
 
     <script type="text/javascript" src='{% static "build/HiventHandle.js" %}'></script>
     <script type="text/javascript" src='{% static "build/Hivent.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/HistoricalChange.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperation.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/HiventOperation.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventController.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoAtTag.js" %}'></script>
     <script type="text/javascript" src='{% static "build/HiventInfoPopover.js" %}'></script>
