new change mechanism implemented

--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -137,7 +137,7 @@
     <script type="text/javascript" src='{% static "build/DatabaseInterface.js" %}'></script>
 
     <script type="text/javascript" src='{% static "build/EditMode.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditModeOperation.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationCreator.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewTerritories.js" %}'></script>
