--- a/HistoGlobe_client/index.htm
+++ b/HistoGlobe_client/index.htm
@@ -142,7 +142,7 @@
     <script type="text/javascript" src='{% static "build/EditOperationStep.SelectOldAreas.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewTerritories.js" %}'></script>
     <script type="text/javascript" src='{% static "build/EditOperationStep.CreateNewNames.js" %}'></script>
-    <script type="text/javascript" src='{% static "build/EditOperationStep.AddChange.js" %}'></script>
+    <script type="text/javascript" src='{% static "build/EditOperationStep.AddToHivent.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewTerritoryTool.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewNameTool.js" %}'></script>
     <script type="text/javascript" src='{% static "build/NewHiventBox.js" %}'></script>
